--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Raleway:wght@700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Raleway:wght@400;600;700;800&display=swap"
       rel="stylesheet"
     />
     <script
@@ -21,5 +21,426 @@
     ></script>
     <link rel="stylesheet" href="./css/main.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="menu">
+      <ion-icon name="close" class="menu-close"></ion-icon>
+      <ul class="menu-list">
+        <li class="menu-item">
+          <a href="#portfolio" class="menu-link">Portfolio</a>
+        </li>
+        <li class="menu-item">
+          <a href="#partners" class="menu-link">Partners</a>
+        </li>
+        <li class="menu-item">
+          <a href="#team" class="menu-link">Team</a>
+        </li>
+        <li class="menu-item">
+          <a href="#blog" class="menu-link">Blog</a>
+        </li>
+        <li class="menu-item">
+          <a href="#contact" class="menu-link">Contact</a>
+        </li>
+        <li class="menu-item menu-phone">
+          Phone: <a href="tel:055951237851">+055 - 951 237 851</a>
+        </li>
+      </ul>
+    </div>
+    <header class="header">
+      <div class="container">
+        <div class="header-main">
+          <img src="./images/logo.png" alt="" class="header-logo" />
+          <div class="navigation">
+            <p class="header-phone">
+              Phone: <a href="tel:055951237851">+055 - 951 237 851</a>
+            </p>
+            <img src="./images/icon-search.png" alt="" class="icon-search" />
+            <img src="./images/icon-bars.png" alt="" class="menu-toggle" />
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="hero">
+        <img src="./images/img1.png" alt="" class="hero-image" />
+        <div class="container">
+          <div class="hero-content">
+            <h2 class="hero-caption second-font">creative & digital</h2>
+            <h1 class="hero-heading second-font">Agency</h1>
+            <a href="#" class="hero-link">Purchase Now</a>
+          </div>
+        </div>
+      </section>
+      <section class="portfolio" id="portfolio">
+        <div class="container">
+          <div class="portfolio-list">
+            <div class="portfolio-column">
+              <div class="portfolio-item">
+                <a href="#" class="portfolio-image">
+                  <img src="./images/img2.png" alt="" />
+                </a>
+                <h3>
+                  <a class="portfolio-title title second-font" href="">
+                    Campaign of exhibition of architectural field
+                  </a>
+                </h3>
+                <a href="#" class="portfolio-category text--small"
+                  >Photography</a
+                >
+              </div>
+              <div class="portfolio-item">
+                <a href="#" class="portfolio-image">
+                  <img src="./images/img3.png" alt="" />
+                </a>
+                <h3>
+                  <a class="portfolio-title title second-font" href="">
+                    Campaign of exhibition of architectural field
+                  </a>
+                </h3>
+                <a href="#" class="portfolio-category text--small"
+                  >Photography</a
+                >
+              </div>
+              <div class="portfolio-item">
+                <a href="#" class="portfolio-image">
+                  <img src="./images/img4.png" alt="" />
+                </a>
+                <h3>
+                  <a class="portfolio-title title second-font" href="">
+                    Campaign of exhibition of architectural field
+                  </a>
+                </h3>
+                <a href="#" class="portfolio-category text--small"
+                  >Photography</a
+                >
+              </div>
+            </div>
+            <div class="portfolio-column">
+              <div class="portfolio-item">
+                <a href="#" class="portfolio-image">
+                  <img src="./images/img5.png" alt="" />
+                </a>
+                <h3>
+                  <a class="portfolio-title title second-font" href="">
+                    Campaign of exhibition of architectural field
+                  </a>
+                </h3>
+                <a href="#" class="portfolio-category text--small"
+                  >Photography</a
+                >
+              </div>
+              <div class="portfolio-item">
+                <a href="#" class="portfolio-image">
+                  <img src="./images/img6.png" alt="" />
+                </a>
+                <h3>
+                  <a class="portfolio-title title second-font" href="">
+                    Campaign of exhibition of architectural field
+                  </a>
+                </h3>
+                <a href="#" class="portfolio-category text--small"
+                  >Photography</a
+                >
+              </div>
+              <div class="portfolio-item">
+                <a href="#" class="portfolio-image">
+                  <img src="./images/img7.png" alt="" />
+                </a>
+                <h3>
+                  <a class="portfolio-title title second-font" href="">
+                    Campaign of exhibition of architectural field
+                  </a>
+                </h3>
+                <a href="#" class="portfolio-category text--small"
+                  >Photography</a
+                >
+              </div>
+              <div class="portfolio-item">
+                <a href="#" class="portfolio-image">
+                  <img src="./images/img8.png" alt="" />
+                </a>
+                <h3>
+                  <a class="portfolio-title title second-font" href="">
+                    Campaign of exhibition of architectural field
+                  </a>
+                </h3>
+                <a href="#" class="portfolio-category text--small"
+                  >Photography</a
+                >
+              </div>
+            </div>
+            <div class="portfolio-column">
+              <div class="portfolio-item">
+                <a href="#" class="portfolio-image">
+                  <img src="./images/img9.png" alt="" />
+                </a>
+                <h3>
+                  <a class="portfolio-title title second-font" href="">
+                    Campaign of exhibition of architectural field
+                  </a>
+                </h3>
+                <a href="#" class="portfolio-category text--small"
+                  >Photography</a
+                >
+              </div>
+              <div class="portfolio-item">
+                <a href="#" class="portfolio-image">
+                  <img src="./images/img10.png" alt="" />
+                </a>
+                <h3>
+                  <a class="portfolio-title title second-font" href="">
+                    Campaign of exhibition of architectural field
+                  </a>
+                </h3>
+                <a href="#" class="portfolio-category text--small"
+                  >Photography</a
+                >
+              </div>
+              <div class="portfolio-item">
+                <a href="#" class="portfolio-image">
+                  <img src="./images/img11.png" alt="" />
+                </a>
+                <h3>
+                  <a class="portfolio-title title second-font" href="">
+                    Campaign of exhibition of architectural field
+                  </a>
+                </h3>
+                <a href="#" class="portfolio-category text--small"
+                  >Photography</a
+                >
+              </div>
+            </div>
+          </div>
+          <a href="#" class="btn btn--primary portfolio-link">Get Started</a>
+        </div>
+      </section>
+      <section class="partner" id="partners">
+        <div class="container">
+          <div class="partner-main">
+            <a href="#" class="partner-item">
+              <img src="./images/logo1.png" alt="" />
+            </a>
+            <a href="#" class="partner-item">
+              <img src="./images/logo2.png" alt="" />
+            </a>
+            <a href="#" class="partner-item">
+              <img src="./images/logo3.png" alt="" />
+            </a>
+            <a href="#" class="partner-item">
+              <img src="./images/logo4.png" alt="" />
+            </a>
+            <a href="#" class="partner-item">
+              <img src="./images/logo5.png" alt="" />
+            </a>
+            <a href="#" class="partner-item">
+              <img src="./images/logo6.png" alt="" />
+            </a>
+            <a href="#" class="partner-item">
+              <img src="./images/logo7.png" alt="" />
+            </a>
+            <a href="#" class="partner-item">
+              <img src="./images/logo8.png" alt="" />
+            </a>
+          </div>
+        </div>
+      </section>
+      <section class="team" id="team">
+        <div class="container">
+          <div class="team-main">
+            <div class="team-content">
+              <h2 class="team-heading heading second-font">
+                Our team will be Happy to help you
+              </h2>
+              <p class="team-desc">
+                Phasellus pulvinar iaculis nunc at placerat. Sed porta
+                sollicitudin eros, vel sagittis turpis consequat nec.
+              </p>
+              <a href="" class="btn btn--primary">Get Started</a>
+            </div>
+            <div class="team-images">
+              <div class="team-column">
+                <a href="#" class="team-image">
+                  <img src="./images/team1.png" alt="" />
+                </a>
+                <a href="#" class="team-image">
+                  <img src="./images/team2.png" class="team-img2" alt="" />
+                </a>
+              </div>
+              <div class="team-column">
+                <a href="#" class="team-image">
+                  <img src="./images/team3.png" alt="" />
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="blog" id="blog">
+        <div class="container">
+          <div class="blog-header">
+            <h2 class="blog-heading heading">Take a look at our services</h2>
+            <p class="blog-desc text">
+              Integer eu metus at orci scelerisque rutrum. Vivamus condimentu
+              ipsum vitae iaculis cursus, turpis nisl.
+            </p>
+          </div>
+          <div class="blog-list">
+            <div class="blog-item">
+              <a href="#" class="blog-image">
+                <img src="./images/blog1.png" alt="" />
+              </a>
+              <h3>
+                <a href="" class="blog-title title"
+                  >Illustration development basics for beginners</a
+                >
+              </h3>
+              <a href="#" class="blog-category text--small">Design</a>
+            </div>
+            <div class="blog-item">
+              <a href="#" class="blog-image">
+                <img src="./images/blog2.png" alt="" />
+              </a>
+              <h3>
+                <a href="" class="blog-title title"
+                  >Our best music list to listen to on spotify</a
+                >
+              </h3>
+              <a href="#" class="blog-category text--small">Music</a>
+            </div>
+            <div class="blog-item">
+              <a href="#" class="blog-image">
+                <img src="./images/blog3.png" alt="" />
+              </a>
+              <h3>
+                <a href="" class="blog-title title">
+                  Gallery design and composition process
+                </a>
+              </h3>
+              <a href="#" class="blog-category text--small">Courses</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="contact" id="contact">
+        <div class="container contact-container">
+          <div class="contact-header">
+            <h2 class="contact-heading heading">
+              Contact us to <strong>Grow your Business</strong>
+            </h2>
+            <p class="contact-desc text">
+              Integer eu metus at orci scelerisque rutrum. Vivamus condimentum,
+              ipsum vitae iaculis cursus, turpis nisl ultricies massa.
+            </p>
+          </div>
+          <form action="javascript:void(0)" class="contact-form">
+            <input
+              type="text"
+              class="contact-input contact-field"
+              placeholder="Antho_"
+              required
+            />
+            <input
+              type="email"
+              class="contact-input contact-field"
+              placeholder="E.g., a.octavian@gmail.com"
+              required
+            />
+            <textarea
+              class="contact-area contact-field"
+              placeholder="Your message"
+              required
+              minlength="50"
+            ></textarea>
+            <button type="submit" class="btn btn--secondary">
+              Send Message
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer-top">
+        <div class="container">
+          <div class="footer-main">
+            <div class="footer-column">
+              <img src="./images/logo-footer.png" alt="" class="footer-logo" />
+              <div class="footer-desc text">
+                Vivamus dapibus et purus quis mollis. Mauris tempus tortor vel
+                mi eleifend laoreet. Nulla laoreet sapien erat.
+              </div>
+              <div class="social">
+                <a href="#" class="social-item">
+                  <ion-icon name="logo-facebook"></ion-icon>
+                </a>
+                <a href="#" class="social-item">
+                  <ion-icon name="logo-twitter"></ion-icon>
+                </a>
+                <a href="#" class="social-item">
+                  <ion-icon name="logo-instagram"></ion-icon>
+                </a>
+                <a href="#" class="social-item">
+                  <ion-icon name="logo-dribbble"></ion-icon>
+                </a>
+              </div>
+            </div>
+            <div class="footer-column">
+              <h3 class="footer-heading second-font">Usefull Links</h3>
+              <ul class="footer-links">
+                <li class="footer-item">
+                  <a href="#" class="footer-link">About Us</a>
+                </li>
+                <li class="footer-item">
+                  <a href="#" class="footer-link">Contact Us</a>
+                </li>
+                <li class="footer-item">
+                  <a href="#" class="footer-link">Terms of Services</a>
+                </li>
+                <li class="footer-item">
+                  <a href="#" class="footer-link">Plan & Precing</a>
+                </li>
+                <li class="footer-item">
+                  <a href="#" class="footer-link">Site Map</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer-column">
+              <h3 class="footer-heading second-font">Contact Us</h3>
+              <ul class="footer-info">
+                <li>Phone Number: ( + 051 ) 958 23 78 51</li>
+                <li>
+                  Phone Number 2:
+                  <span class="footer-highlight">( + 051 ) 958 23 78 51</span>
+                </li>
+              </ul>
+              <ul class="footer-info">
+                <li>
+                  <a href="mailto:support@ocatavian.io"
+                    >Email: support@ocatavian.io</a
+                  >
+                </li>
+                <li>Fax: support@ocatavian.io</li>
+              </ul>
+              <ul class="footer-info">
+                <li>
+                  Address: Envato Pty Ltd 13/2 Permanent ST melbourne VLC 3000 -
+                  Australia
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="container footer-container">
+          <a href="#" class="footer-rocket"
+            ><ion-icon name="rocket"></ion-icon
+          ></a>
+          <p>
+            Copyright © 2020 Octavian, Designed by <a href="#">TexTheme</a> All
+            Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
+    <script src="./scripts/main.js"></script>
+  </body>
 </html>
